wip on bus routing, sort out availability and fix some broken tests